--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/LocationSearch.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/LocationSearch.cshtml
@@ -13,7 +13,7 @@
 
 @Html.HiddenFor(m => m.Ukprn)
 @Html.HiddenFor(m => m.EmployerErn)
-@Html.HiddenFor(m => m.ProviderSiteEdsErn)
+@Html.HiddenFor(m => m.ProviderSiteEdsUrn)
 @Html.HiddenFor(m => m.VacancyGuid)
 @Html.HiddenFor(m => m.ComeFromPreview)
 @Html.HiddenFor(m => m.VacancyReferenceNumber)
