--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/EditSite.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/EditSite.cshtml
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-    @Html.HiddenFor(m => m.EdsErn);
+    @Html.HiddenFor(m => m.EdsUrn);
 
     <div class="form-group">
         <button class="button">Save to sites</button>
