--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
             <a href="#main" class="skiplink">Skip to main content</a>
         </div>
     </div>
-    <header role="banner" class="global-header">
+    <header class="global-header">
         <div class="global-header__wrapper">
             <div class="global-header__logo">
                 <a href="http://gov.uk" title="Go to the GOV.UK homepage" class="govuk-logo">
@@ -82,7 +82,7 @@
                 </div>
             </div>
         </div>
-        <main role="main" id="main">
+        <main id="main">
             @{
                 var controller = ViewContext.Controller as SFA.Apprenticeships.Web.Common.Controllers.ControllerBase;
 
@@ -128,7 +128,7 @@
             </noscript>
         }
     </div>
-    <footer class="gov-border" role="contentinfo">
+    <footer class="gov-border">
         <div class="footer__wrapper">
             <div class="footer__meta">
                 <ul class="footer__nav">
