--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
@@ -11,7 +11,7 @@
 
     @Html.DisplayFor(m => m, LocationSearchViewModel.PartialView)
 
-    var saveButtonText = (Model.Status == VacancyStatuses.RejectedByQA || Model.ComeFromPreview) ? "Save and return to Preview" : "Save and continue";
+    var saveButtonText = (Model.Status == VacancyStatus.RejectedByQA || Model.ComeFromPreview) ? "Save and return to Preview" : "Save and continue";
     <button type="submit" class="button" name="AddLocations" value="Locations">@saveButtonText</button>
     @Html.RouteLink("Return to previous page", RecruitmentRouteNames.ComfirmEmployer, new { providerSiteErn = Model.ProviderSiteEdsUrn, edsUrn = Model.EmployerErn, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview, useEmployerLocation = true })
 }
