us852: appoint candidate, initial check-in.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/AddEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/AddEmployer.cshtml
@@ -66,7 +66,7 @@
                         </td>
                         <td>5736479734</td>
                         <td>
-                            <a href="@Url.RouteUrl(RecruitmentRouteNames.ComfirmEmployer, new {employerid = 1})">Select employer</a>
+                            <a href="@Url.RouteUrl(RecruitmentRouteNames.ConfirmEmployer, new {employerid = 1})">Select employer</a>
                         </td>
                     </tr>
                     <tr>
@@ -78,7 +78,7 @@
                             RG21 8KL Basingstoke
                         </td>
                         <td>637452391</td>
-                        <td><a href="@Url.RouteUrl(RecruitmentRouteNames.ComfirmEmployer, new {employerid = 1})">Select employer</a></td>
+                        <td><a href="@Url.RouteUrl(RecruitmentRouteNames.ConfirmEmployer, new {employerid = 1})">Select employer</a></td>
                     </tr>
                     <tr>
                         <th><h4 class="bold-small">Nero</h4></th>
@@ -87,7 +87,7 @@
                             RG21 9OD Basingstoke
                         </td>
                         <td>982436529</td>
-                        <td><a href="@Url.RouteUrl(RecruitmentRouteNames.ComfirmEmployer, new {employerid = 1})">Select employer</a></td>
+                        <td><a href="@Url.RouteUrl(RecruitmentRouteNames.ConfirmEmployer, new {employerid = 1})">Select employer</a></td>
                     </tr>
                     </tbody>
                 </table>
