--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmNewEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmNewEmployer.cshtml
@@ -21,7 +21,7 @@
 
     <div class="grid grid-1-1">
         <button class="button">Save description and link to employer</button>
-        @Html.RouteLink("Choose a different employer", RecruitmentRouteNames.SelectNewEmployer, new { providerSiteErn = Model.ProviderSiteEdsUrn, edsUrn = Model.Employer.EdsUrn, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview })
+        @Html.RouteLink("Choose a different employer", RecruitmentRouteNames.SelectNewEmployer, new { providerSiteErn = Model.ProviderSiteId, edsUrn = Model.Employer.EdsUrn, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview })
     </div>
 }
 
