--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/EmployerDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/EmployerDetails.cshtml
@@ -6,7 +6,7 @@
     @Html.Partial("ValidationSummary", ViewData.ModelState)
 
     @Html.HiddenFor(m => m.ProviderSiteId)
-    @Html.HiddenFor(m => m.Employer.EmployerId)
+    @Html.HiddenFor(m => m.Employer.EdsUrn)
     @Html.HiddenFor(m => m.VacancyGuid)
     @Html.HiddenFor(m => m.VacancyReferenceNumber)
     @Html.HiddenFor(m => m.ComeFromPreview)
