--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Candidate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Candidate.cshtml
@@ -1,11 +1,13 @@
 ﻿@using SFA.Apprenticeships.Web.Common.ViewModels.MyApplications
-@model MyApplicationsViewModel
+@model SFA.Apprenticeships.Web.Manage.ViewModels.CandidateApplicationsViewModel
 
 @{
     ViewBag.Title = "Candidate applications";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>title</h2>
+<h1 class="heading-xlarge">
+    My applications - @Model.CandidateName
+</h1>
 
-@Html.DisplayFor(m => m, MyApplicationsViewModel.PartialView)
+@Html.DisplayFor(m => m.CandidateApplications, MyApplicationsViewModel.PartialView)
