--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
 
     <div class="skiplink-container">
         <div>
-            <a href="#main" class="skiplink">Skip to main content</a>
+            <a href="#main" class="skiplink" tabindex="-1">Skip to main content</a>
         </div>
     </div>
     <header class="global-header">
