No longer sharing code. Created copies of views instead following discussion

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Index.cshtml
@@ -2,9 +2,9 @@
 @using SFA.Apprenticeships.Application.Applications.Extensions
 @using SFA.Apprenticeships.Domain.Entities.Applications
 @using SFA.Apprenticeships.Domain.Entities.Vacancies
-@using SFA.Apprenticeships.Web.Common.ViewModels.MyApplications
+@using SFA.Apprenticeships.Web.Candidate.ViewModels.MyApplications
 
-@model SFA.Apprenticeships.Web.Common.ViewModels.MyApplications.MyApplicationsViewModel
+@model SFA.Apprenticeships.Web.Candidate.ViewModels.MyApplications.MyApplicationsViewModel
 
 @{
     ViewBag.Title = "My applications - Find an apprenticeship";
