Moving candidate application views and view models into RAA common

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
@@ -1,6 +1,6 @@
 ﻿@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @using SFA.Apprenticeships.Web.Recruit.Constants
-@using SFA.Apprenticeships.Web.Recruit.ViewModels.Application
+@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application
 
 @model VacancyApplicationsViewModel
 
