--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/AboutYou.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/AboutYou.cshtml
@@ -1,4 +1,4 @@
-﻿@model SFA.Apprenticeships.Web.Recruit.ViewModels.Application.AboutYouViewModel
+﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.AboutYouViewModel
 
 <fieldset class="fieldset-with-border">
     <legend class="heading-large">
