--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/ApplicantDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/ApplicantDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model SFA.Apprenticeships.Web.Recruit.ViewModels.Application.ApplicantDetailsViewModel
+﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.ApplicantDetailsViewModel
 
 <section class="inner-block-padr">
     <div class="panel-indent">
