--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/Education.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/Education.cshtml
@@ -1,4 +1,4 @@
-﻿@model SFA.Apprenticeships.Web.Recruit.ViewModels.Application.EducationViewModel
+﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.EducationViewModel
 
 <fieldset class="fieldset-with-border">
     <legend class="heading-large">
