--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/Qualifications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/Qualifications.cshtml
@@ -1,4 +1,4 @@
-﻿@model IList<SFA.Apprenticeships.Web.Recruit.ViewModels.Application.QualificationViewModel>
+﻿@model IList<SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.QualificationViewModel>
 
 <fieldset class="fieldset-with-border">
     <h2 class="heading-large">
