--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/TrainingCourses.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/TrainingCourses.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SFA.Apprenticeships.Web.Recruit.ViewModels.Application.TrainingCourseViewModel>
+﻿@model IEnumerable<SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.TrainingCourseViewModel>
 
 <section class="section-border">
     <h2 class="heading-large">
