--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/WorkExperience.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/DisplayTemplates/WorkExperience.cshtml
@@ -1,4 +1,4 @@
-﻿@using SFA.Apprenticeships.Web.Recruit.ViewModels.Application
+﻿@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application
 @model IEnumerable<WorkExperienceViewModel>
 
 <section class="section-border">
