--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmSuccessful.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmSuccessful.cshtml
@@ -1,6 +1,6 @@
 ﻿@using SFA.Apprenticeships.Web.Recruit.Constants
 
-@model SFA.Apprenticeships.Web.Recruit.ViewModels.Application.Apprenticeship.ApprenticeshipApplicationViewModel
+@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.Apprenticeship.ApprenticeshipApplicationViewModel
 
 @{
     ViewBag.Title = "Recruit an Apprentice - Send outcome";
