--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
@@ -1,7 +1,7 @@
 ﻿@using SFA.Apprenticeships.Domain.Entities.Applications
 @using SFA.Apprenticeships.Web.Recruit.Constants
 
-@model SFA.Apprenticeships.Web.Recruit.ViewModels.Application.Apprenticeship.ApprenticeshipApplicationViewModel
+@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.Apprenticeship.ApprenticeshipApplicationViewModel
 
 @{
     ViewBag.Title = "Recruit an Apprentice - Review application";
