--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
@@ -1,4 +1,6 @@
-﻿@using SFA.Apprenticeships.Domain.Entities.Applications
+﻿@using System.Web.Mvc.Html
+@using SFA.Apprenticeships.Domain.Entities.Applications
+@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application
 @using SFA.Apprenticeships.Web.Recruit.Constants
 
 @model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application.Apprenticeship.ApprenticeshipApplicationViewModel
@@ -43,15 +45,15 @@
         </div>
         <div class="grid-wrapper">
             <div class="grid grid-2-3">
-                @Html.DisplayFor(m => m.ApplicantDetails, "ApplicantDetails")
+                @Html.DisplayFor(m => m.ApplicantDetails, ApplicantDetailsViewModel.PartialView)
             </div>
             <div class="grid grid-1-3">
             </div>
         </div>
-        @Html.DisplayFor(m => m.AboutYou, "AboutYou")
-        @Html.DisplayFor(m => m.Education, "Education")
-        @Html.DisplayFor(m => m.WorkExperience, "WorkExperience")
-        @Html.DisplayFor(m => m.TrainingCourses, "TrainingCourses")
+        @Html.DisplayFor(m => m.AboutYou, AboutYouViewModel.PartialView)
+        @Html.DisplayFor(m => m.Education, EducationViewModel.PartialView)
+        @Html.DisplayFor(m => m.WorkExperience, WorkExperienceViewModel.PartialView)
+        @Html.DisplayFor(m => m.TrainingCourses, TrainingCourseViewModel.PartialView)
 
 
         @if (Model.Vacancy.HasQuestions ||
@@ -81,7 +83,7 @@
                     }
                 }
 
-                @Html.DisplayFor(m => m.ApplicantDetails.DisabilityStatus)
+                @Html.DisplayFor(m => m.ApplicantDetails.DisabilityStatus, @"Application\DisabilityStatusQuestion")
 
                 @if (Model.VacancyQuestionAnswers.HasAnythingWeCanDoToSupportYourInterviewAnswer)
                 {
